# pretiction_tcharge

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  dashboard_streamlit.py  dashboard_streamlit.py:Zone.Identifier  interface.py  pyproject.toml  requirements.txt
src/tauxcharge/: __main__.py  api.py
src/tauxcharge/elastic/: elasticsearch.py
src/tauxcharge/model/: lstm_regressor.py
src/tauxcharge/preprocessing/: custom_preprocessor.py  sequence_generator.py  splitter.py
tests/: test_pipeline.py
