[project]
name = "tauxcharge"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow (>=2.15.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "elasticsearch (>=9.0.2,<10.0.0)",
    "datetime (>=5.5,<6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "unicorn (>=2.1.3,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]

[tool.poetry]
name = "tauxcharge"
version = "0.1.0"
description = ""
authors = ["Makhtar <email@example.com>"]

packages = [
    { include = "tauxcharge", from = "src" }
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
